Test Cases/V2/Test Case/Tests/TT-238 - VTO/Test Cases/Negative/TT_238_6_3YearPicture.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>TT_238_6_3YearPicture</name>
   <tag></tag>
   <comment></comment>
   <testCaseGuid>a4da50a1-17ff-4bed-8b79-78efaf2ab0b6</testCaseGuid>
</TestCaseEntity>
